--- a/Sjerrul.RockPaperScissors/App.config
+++ b/Sjerrul.RockPaperScissors/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <appSettings>
+        <add key="switchStrategiesAfter" value="2" />
+        <add key="degradeStrategy" value="0,7" />
+    </appSettings>
 </configuration>
