--- a/Sjerrul.RockPaperScissors/Sjerrul.RockPaperScissors.csproj
+++ b/Sjerrul.RockPaperScissors/Sjerrul.RockPaperScissors.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\Move.cs" />
+    <Compile Include="Enums\GameMove.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,7 +55,9 @@
     <Compile Include="MoveExtensions.cs" />
     <Compile Include="Players\Computer.cs" />
     <Compile Include="Players\Human.cs" />
-    <Compile Include="Players\Player.cs" />
+    <Compile Include="Players\IComputer.cs" />
+    <Compile Include="Players\IHuman.cs" />
+    <Compile Include="Players\IPlayer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Strategies\AlwaysRockStrategy.cs" />
@@ -66,7 +68,6 @@
     <Compile Include="Strategies\IStrategy.cs" />
     <Compile Include="Strategies\PsychicStrategy.cs" />
     <Compile Include="Strategies\UsePlayersLastMoveStrategy.cs" />
-    <Compile Include="Turn.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
